# calculator

./: .travis.yml  CMakeLists.txt  ComplexNumber.cpp  ComplexNumber.hpp  Derivative.cpp  Derivative.hpp  Equation.cpp  Equation.hpp  Error.h  Factor.cpp  Factor.hpp  Function.cpp  Function.hpp  LICENSE.md  Lexer.cpp  Lexer.hpp  MathFunction.cpp  MathFunction.hpp  Node.hpp  Number.cpp  Number.hpp  NumberRepr.cpp  NumberRepr.hpp  Parser.cpp  Parser.hpp  Power.cpp  Power.hpp  README.md  State.cpp  State.hpp  Summand.cpp  Summand.hpp  Token.cpp  Token.hpp  TwoOp.cpp  TwoOp.hpp  UnaryMinus.cpp  UnaryMinus.hpp  UserFunction.cpp  UserFunction.hpp  (+6 more)
